--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "start": "node app.js",
     "dev": "node --inspect app.js"
   },
-  "keywords": ["stocks", "trading", "telegram", "premarket", "monitoring"],
+  "keywords": [
+    "stocks",
+    "trading",
+    "telegram",
+    "premarket",
+    "monitoring"
+  ],
   "author": "",
   "license": "MIT",
   "engines": {
@@ -18,5 +24,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "telegraf": "^4.16.3"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10"
   }
 }
