--- a/fly.toml
+++ b/fly.toml
@@ -2,18 +2,15 @@ app = "stockscreener-ahjvjg"
 primary_region = "fra"
 
 [build]
-  # Fly сам згенерує образ для Node.js
+  # авто-білд для Node, Dockerfile не потрібен
 
 [processes]
-  app = "npm start"   # у тебе в package.json це "node app.js"
+  app = "npm start"  # у тебе це "node app.js"
 
 [vm]
   cpu_kind = "shared"
   cpus = 1
   memory = "256mb"
-
-[restart]
-  policy = "always"
 
 [experimental]
   auto_rollback = true
