--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "playwright": "^1.55.0",
+    "sharp": "^0.34.3",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
