--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Functional stock monitoring application with Telegram notifications for premarket trading",
   "type": "module",
   "private": true,
-  "main": "app.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "node --inspect app.js"
+    "start": "node src/index.js",
+    "dev": "node --inspect src/index.js"
   },
   "keywords": [
     "stocks",
