--- a/env.example
+++ b/env.example
@@ -1,9 +1,13 @@
 # Telegram Bot Configuration
-BOT_TOKEN=your_telegram_bot_token_here
-CHAT_ID=your_telegram_chat_id_here
-THREAD_ID=your_telegram_thread_id_here_optional
+BOT_TOKEN=your_telegram_bot_token
+CHAT_ID=your_telegram_chat_id
+THREAD_ID=your_thread_id_optional
 
 # Trading Configuration
-PREMARKET_THRESHOLD=10
-SCAN_INTERVAL_MS=10000
-SEND_ON_STARTUP=false
+PREMARKET_THRESHOLD=10        # Minimum % change
+SCAN_INTERVAL_MS=10000        # Scan interval in ms
+SEND_ON_STARTUP=false         # Send all found stocks on startup
+
+# Security & Session (Optional but recommended)
+# Get this from your browser's devtools (network tab, scanner request)
+TV_COOKIE=your_tradingview_cookie_here
