--- a/env.example
+++ b/env.example
@@ -1,13 +1,29 @@
-# Telegram Bot Configuration
+# 🤖 Telegram Bot Configuration
 BOT_TOKEN=your_telegram_bot_token
 CHAT_ID=your_telegram_chat_id
 THREAD_ID=your_thread_id_optional
 
-# Trading Configuration
-PREMARKET_THRESHOLD=10        # Minimum % change
-SCAN_INTERVAL_MS=10000        # Scan interval in ms
-SEND_ON_STARTUP=false         # Send all found stocks on startup
+# 📈 Trading & Growth Scanner
+PREMARKET_THRESHOLD=10         # Minimum % change for premarket alerts
+SCAN_INTERVAL_MS=10000         # Premarket scan interval (ms)
+PREMARKET_ALERT_STEP=1.0       # Price % step for repeated alerts
+SEND_ON_STARTUP=false          # Send all found stocks on startup
 
-# Security & Session (Optional but recommended)
+# 🔥 Market Scanner (Shadow Velocity)
+MARKET_SCAN_INTERVAL_MS=10000        # Data polling interval (ms)
+MARKET_DASHBOARD_INTERVAL_MS=30000   # Dashboard update interval (ms)
+MARKET_ALERT_COOLDOWN_MS=300000      # Cooldown for repeated alerts (ms)
+MARKET_DUMP_THRESHOLD=-2.0           # Price % drop per min for alerts
+MARKET_RVOL_PUMP_DELTA=5.0           # RVOL jump for pump alerts
+
+# 🎯 Catalyst Sniper
+CATALYST_WATCHLIST_INTERVAL_MS=60000 # Watchlist update interval (ms)
+CATALYST_ACTIVE_INTERVAL_MS=15000    # Active scan interval (ms)
+
+# 💾 RVOL Monitor (Optional)
+RVOL_THRESHOLD=3.0
+RVOL_ALERT_STEP=2.0
+
+# 🔐 Security & Session
 # Get this from your browser's devtools (network tab, scanner request)
 TV_COOKIE=your_tradingview_cookie_here
